# simple_service

./: README.md  pyproject.toml
src/: __main__.py
src/service/: core.py  view.py
src/service/templates/: index.html
